@@ -1,5 +1,9 @@
 h1. CHANGELOG
 
+h2. 2.2.3 unreleased
+
+* fix 'setup', 'frontend', and 'controllers' recipes to allow CanCan authorization when OmniAuth authentication is selected
+
 h2. 2.2.2 August 26, 2012
 
 * fix 'prelaunch' recipe for missing Cucumber feature file
